Add Get member list
